<resources>
    <string name="app_name">TestBookChatApp</string>

    <string name="accept_terms_and_conditions">By clicking Sign up, you are agreeing to the\n<u>Terms &amp; Conditions</u> and <u>Privacy Policy</u></string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="required_field">Required field</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="no_network">No active data connection found. Please check your internet connectivity.</string>
    <string name="okey">Ok</string>
    <string name="cancel">Cancel</string>

    <string name="forgot_password">Forgot password?</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="back">Back</string>
    <string name="sign_up">Sign up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="logout_message">Are you sure you want to logout?</string>


</resources>
