<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBG"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".activity.SignupActivity"
    tools:showIn="@layout/activity_sign_up">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ll_bottom"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center">

                    <com.testbook.arshad.testbookchatapp.utils.CircleImageView
                        android:layout_width="96dp"
                        android:layout_height="96dp"
                        android:src="@drawable/man"
                        app:civ_border_width="1dp"
                        android:id="@+id/img_user"
                        app:civ_border_color="@color/white"
                        />

                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="20dp"
                        android:id="@+id/img_camera"
                        android:src="@drawable/ic_camera"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"/>

                </RelativeLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="20dp"
                    android:weightSum="2">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_first_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="5dp"
                        android:layout_weight="1"
                        android:theme="@style/EditTextHint"
                        app:errorTextAppearance="@style/error_appearance"
                        app:hintTextAppearance="@style/MyTextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edt_bg_selector"
                            android:hint="@string/first_name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_last_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:theme="@style/EditTextHint"
                        app:errorTextAppearance="@style/error_appearance"
                        app:hintTextAppearance="@style/MyTextInputLayout">

                        <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/edt_bg_selector"
                            android:hint="@string/last_name"
                            android:imeOptions="actionNext"
                            android:inputType="textCapWords"
                            android:singleLine="true"
                            android:textColor="@color/white"
                            android:textSize="16dp" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:theme="@style/EditTextHint"
                    app:errorTextAppearance="@style/error_appearance"
                    app:hintTextAppearance="@style/MyTextInputLayout">

                    <android.support.design.widget.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edt_bg_selector"
                        android:hint="@string/username"
                        android:imeOptions="actionDone"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@color/white"
                        android:textSize="16dp" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/accept_terms_and_conditions"
                    android:gravity="center"
                    android:textColor="@color/darkTransparentHintColor"
                    android:alpha=".8"
                    android:id="@+id/txt_terms_privacy"
                    android:fontFamily="@font/raleway_regular"
                    android:textSize="13dp"
                    android:layout_marginTop="10dp"/>

                <TextView
                    android:id="@+id/txt_signup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:alpha=".8"
                    android:background="@drawable/white_border"
                    android:fontFamily="@font/raleway_medium"
                    android:paddingBottom="6dp"
                    android:paddingLeft="45dp"
                    android:paddingRight="45dp"
                    android:paddingTop="6dp"
                    android:text="@string/sign_up"
                    android:textColor="@color/white"
                    android:textSize="16dp" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha=".6"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/already_have_an_account"
            android:textColor="@color/white"
            android:textSize="13dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:alpha=".8"
            android:fontFamily="@font/raleway_medium"
            android:paddingLeft="5dp"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="15dp" />

    </LinearLayout>

</RelativeLayout>